--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Ejemplos/appear/appear-web/nbproject/
+/Ejemplos/appear/appear-web/target/
+/Ejemplos/appear/appear-ejb/target/
+/Ejemplos/appear/appear-ear/target/
