--- a/Ejemplos/appear/pom.xml
+++ b/Ejemplos/appear/pom.xml
@@ -11,4 +11,12 @@
     <module>appear-web</module>
     <module>appear-ejb</module>
   </modules>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
